# tree-sitter-beduin

./: Cargo.toml  Package.swift  README.md  binding.gyp  grammar.js  package.json
.swiftpm/xcode/package.xcworkspace/xcuserdata/aapeshkhoev.xcuserdatad/: UserInterfaceState.xcuserstate
.swiftpm/xcode/xcuserdata/aapeshkhoev.xcuserdatad/xcschemes/: xcschememanagement.plist
bindings/node/: binding.cc  index.js
bindings/rust/: README.md  lib.rs
bindings/swift/TreeSitterJSON/: json.h
src/: parser.c
