[package]
name = "tree-sitter-beduin"
description = "Beduin grammar for tree-sitter"
version = "0.1"
authors = ["Max Brunsfeld <maxbrunsfeld@gmail.com>"]
license = "MIT"
readme = "bindings/rust/README.md"
keywords = ["incremental", "parsing", "beduin"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/naxila/tree-sitter-beduin"
edition = "2023"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "~1.0.83"
